Add configuration setup